<resources>
    <string name="app_name">Justpay</string>

    <string name="room_name">5지조</string>
    <string name="room_id">#1234</string>

    <string name="manager_selection">결제자 선택</string>

    <string name="receipt_add">영수증 추가하기</string>
    <string name="receipt_status">3 / 5</string>

    <string name="room_status1">"영수증 업로드 "</string>
    <string name="room_status2">"항목 입력"</string>
    <string name="room_status3">"개인별 항목 체크"</string>
    <string name="room_status4">"결과 확인"</string>
    <string name="room_status_arrow">">"</string>
    <string name="photo_permission1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="photo_permission2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>

    <string name="chart_category1">항목 명</string>
    <string name="chart_category2">총 금액</string>
    <string name="chart_category3">수량</string>
    <string name="chart_category4">참여</string>

    <string name="item_chart_category1">커피</string>
    <string name="item_chart_category2">6000</string>
    <string name="item_chart_category3">2</string>

    <string name="room_payer_txt">"결제자 : "</string>
    <string name="room_payer_btn">"결제자 선택"</string>

    <string name="room_status_prev">이전 단계로</string>
    <string name="room_status_next">다음 단계로</string>
    <string name="room_item_alert">" 수량 오류"</string>

    <string name="room_typing_status">2명이 작업중 ⋯ 이지훈, 오승민</string>

    <string name="room_result_confirm">결과 확인</string>
    <string name="title_activity_room_list">RoomListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_modify">개인정보 수정</string>
    <string name="menu_logout">로그아웃</string>

    <string name="delete_room">방을 나가시겠습니까?</string>
    <string name="new_room">새로운 채팅</string>
    <string name="create_room">방 생성</string>
    <string name="search_room">방 검색</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
</resources>
