<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <EditText
        android:id="@+id/bottom_insertion_category1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/box_round"
        android:ems="10"
        android:hint="@string/chart_category1"
        android:inputType="textPersonName"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/bottom_insertion_category2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/box_round"
        android:ems="10"
        android:hint="@string/chart_category2"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:textSize="@dimen/normal_text_size" />

    <EditText
        android:id="@+id/bottom_insertion_category3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@drawable/box_round"
        android:ems="10"
        android:hint="@string/chart_category3"
        android:inputType="number"
        android:paddingLeft="5dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/add_item_navy" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
